cassandra passing a few basic ITs (#1008)